{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 257,
  "lineage": "f461c9f8-2689-6ea8-5927-a95242a42c3d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:830394630098:listener/app/mts-dev/602f82bce95f8dfd/36e31e37f545cb7c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:830394630098:listener/app/mts-dev/602f82bce95f8dfd/36e31e37f545cb7c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:830394630098:loadbalancer/app/mts-dev/602f82bce95f8dfd",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_vpc.vpc",
            "data.aws_subnets.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:830394630098:listener/app/mts-dev/602f82bce95f8dfd/edaa4a1bcbbd8ee6",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:830394630098:certificate/c2eecd9e-d7bb-49c3-a455-33ca104797da",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:830394630098:targetgroup/mts-dev/1b1d22d6c0329bf4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:830394630098:listener/app/mts-dev/602f82bce95f8dfd/edaa4a1bcbbd8ee6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:830394630098:loadbalancer/app/mts-dev/602f82bce95f8dfd",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.target_group",
            "aws_vpc.vpc",
            "data.aws_subnets.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d668d0e19ca1df52",
            "association_id": "eipassoc-083e233510a06277c",
            "domain": "vpc",
            "id": "eipalloc-0d668d0e19ca1df52",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-07b91a494baebe66d",
            "private_dns": "ip-10-0-27-28.ap-southeast-1.compute.internal",
            "private_ip": "10.0.27.28",
            "public_dns": "ec2-13-215-113-237.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.215.113.237",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff3e23e7844dd484",
            "association_id": "eipassoc-05e2408ebc3e0322e",
            "domain": "vpc",
            "id": "eipalloc-0ff3e23e7844dd484",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0b51c5b8814359d96",
            "private_dns": "ip-10-0-54-92.ap-southeast-1.compute.internal",
            "private_ip": "10.0.54.92",
            "public_dns": "ec2-52-76-235-134.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.76.235.134",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830394630098:internet-gateway/igw-05eddfba3b549e3a5",
            "id": "igw-05eddfba3b549e3a5",
            "owner_id": "830394630098",
            "vpc_id": "vpc-0feaada7c853c8e25"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:830394630098:loadbalancer/app/mts-dev/602f82bce95f8dfd",
            "arn_suffix": "app/mts-dev/602f82bce95f8dfd",
            "desync_mitigation_mode": "defensive",
            "dns_name": "mts-dev-371611546.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:830394630098:loadbalancer/app/mts-dev/602f82bce95f8dfd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mts-dev",
            "security_groups": [
              "sg-0f2edf9ad697b57c2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05ff58dc7c756c188"
              },
              {
                "subnet_id": "subnet-088403579e0db90a0"
              }
            ],
            "subnets": [
              "subnet-05ff58dc7c756c188",
              "subnet-088403579e0db90a0"
            ],
            "vpc_id": "vpc-0feaada7c853c8e25",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_subnets.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:830394630098:targetgroup/mts-dev/1b1d22d6c0329bf4",
            "arn_suffix": "targetgroup/mts-dev/1b1d22d6c0329bf4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:830394630098:targetgroup/mts-dev/1b1d22d6c0329bf4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "mts-dev",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0feaada7c853c8e25"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d668d0e19ca1df52",
            "connectivity_type": "public",
            "id": "nat-048d59d61d9238686",
            "network_interface_id": "eni-07b91a494baebe66d",
            "private_ip": "10.0.27.28",
            "public_ip": "13.215.113.237",
            "subnet_id": "subnet-05ff58dc7c756c188"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.ig",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff3e23e7844dd484",
            "connectivity_type": "public",
            "id": "nat-001a1642f91870b21",
            "network_interface_id": "eni-0b51c5b8814359d96",
            "private_ip": "10.0.54.92",
            "public_ip": "52.76.235.134",
            "subnet_id": "subnet-088403579e0db90a0"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.ig",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-038c4d4d4419dde1d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-048d59d61d9238686",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-038c4d4d4419dde1d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-078c2fbe694591af61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-001a1642f91870b21",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-078c2fbe694591af6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05eddfba3b549e3a5",
            "id": "r-rtb-08fd80e8dcb3827cf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08fd80e8dcb3827cf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830394630098:route-table/rtb-038c4d4d4419dde1d",
            "id": "rtb-038c4d4d4419dde1d",
            "owner_id": "830394630098",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-048d59d61d9238686",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0feaada7c853c8e25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830394630098:route-table/rtb-078c2fbe694591af6",
            "id": "rtb-078c2fbe694591af6",
            "owner_id": "830394630098",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-001a1642f91870b21",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0feaada7c853c8e25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830394630098:route-table/rtb-08fd80e8dcb3827cf",
            "id": "rtb-08fd80e8dcb3827cf",
            "owner_id": "830394630098",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05eddfba3b549e3a5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0feaada7c853c8e25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da3143ceecc71808",
            "route_table_id": "rtb-038c4d4d4419dde1d",
            "subnet_id": "subnet-0b4e78792f188ebd7"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032dc6cc62340c514",
            "route_table_id": "rtb-078c2fbe694591af6",
            "subnet_id": "subnet-00e0d85aef21e0d1a"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054a4e84cadf055ef",
            "route_table_id": "rtb-08fd80e8dcb3827cf",
            "subnet_id": "subnet-05ff58dc7c756c188"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1d5471899626bd5",
            "route_table_id": "rtb-08fd80e8dcb3827cf",
            "subnet_id": "subnet-088403579e0db90a0"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830394630098:subnet/subnet-0b4e78792f188ebd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4e78792f188ebd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "830394630098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Tier": "Private"
            },
            "tags_all": {
              "Tier": "Private"
            },
            "vpc_id": "vpc-0feaada7c853c8e25"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830394630098:subnet/subnet-00e0d85aef21e0d1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e0d85aef21e0d1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "830394630098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Tier": "Private"
            },
            "tags_all": {
              "Tier": "Private"
            },
            "vpc_id": "vpc-0feaada7c853c8e25"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830394630098:subnet/subnet-05ff58dc7c756c188",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ff58dc7c756c188",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "830394630098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Tier": "Public"
            },
            "tags_all": {
              "Tier": "Public"
            },
            "vpc_id": "vpc-0feaada7c853c8e25"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830394630098:subnet/subnet-088403579e0db90a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088403579e0db90a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "830394630098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Tier": "Public"
            },
            "tags_all": {
              "Tier": "Public"
            },
            "vpc_id": "vpc-0feaada7c853c8e25"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830394630098:vpc/vpc-0feaada7c853c8e25",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c28b87c9a02e6847",
            "default_route_table_id": "rtb-0675c34de49f7814b",
            "default_security_group_id": "sg-0f2edf9ad697b57c2",
            "dhcp_options_id": "dopt-09f2dbc1b74335fcf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0feaada7c853c8e25",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0675c34de49f7814b",
            "owner_id": "830394630098"
          }
        }
      ]
    }
  ]
}